@@ -25,7 +25,6 @@ import de.jost_net.JVerein.keys.SplitbuchungTyp;
 import de.jost_net.JVerein.rmi.Buchung;
 import de.willuhn.jameica.gui.Action;
 import de.willuhn.jameica.gui.GUI;
-import de.willuhn.logging.Logger;
 
 public class SplitbuchungNeuAction implements Action
 {
@@ -45,7 +44,7 @@ public class SplitbuchungNeuAction implements Action
       buch.setMitgliedskonto(master.getMitgliedskonto());
       buch.setName(master.getName());
       buch.setProjekt(master.getProjekt());
-      buch.setSplitId(new Long(master.getID()));
+      buch.setSplitId(Long.valueOf(master.getID()));
       buch.setUmsatzid(master.getUmsatzid());
       buch.setZweck(master.getZweck());
       buch.setSpeicherung(false);
@@ -54,7 +53,7 @@ public class SplitbuchungNeuAction implements Action
     }
     catch (RemoteException e)
     {
-      Logger.error("Fehler", e);
+      GUI.getStatusBar().setErrorText(e.getMessage());
     }
   }
 }
